# player-agent

./: .gitignore  AI_ASSISTANT_PROPOSAL.md  DESIGN_SYSTEM.md  README.md  biome.json  gen-icon.mjs  gen-test-demo.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.ai-backup/: main.ts  style.css
.ai-backup/src-tauri/: main.rs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ai_data/config/: llm_config.json
src-tauri/ai_data/knowledge/: features.json
src-tauri/src/: check_state.ps1  main.rs
src-tauri/src/ai/: assistant.rs  knowledge.rs  learning.rs  llm_manager.rs  mod.rs  voice.rs
src/assets/: ai-chat.css
src/lib/: ai-assistant.ts  chat-ui.ts  llm-service.ts  voice-handler.ts
tests/: screenshot-all-tabs.spec.ts  ui.spec.ts
