[package]
name = "aimcamp-player-agent"
version = "1.1.0"
description = "aim.camp Player Agent - CS2 Optimization Tool"
authors = ["Rqdiniz <rqdiniz@aim.camp>"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "window-all", "dialog-all", "fs-all", "windows7-compat", "shell-all"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
dirs-next = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
